# git-sentinel

./: .gitignore  Cargo.toml
docs/superpowers/plans/: 2026-07-07-gitsentinel-implementation.md
docs/superpowers/specs/: 2026-07-07-gitsentinel-design.md
src/: discovery.rs  lib.rs  main.rs  model.rs  util.rs
