[package]
name = "git-sentinel"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "gitsentinel"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
flate2 = "1"
colored = "2"
#Check if executable file
is_executable = "1.0"


[dev-dependencies]
tempfile = "3"
